--- a/app/static/css/app.css
+++ b/app/static/css/app.css
@@ -1,3 +1,15 @@
 body {
     padding-top: 5rem;
 }
+ul{
+    display:grid;
+    grid-template-columns: auto auto auto;
+    row-gap: 20px;
+}
+li{
+    list-style-type: none;
+}
+img{
+    height: 300px;
+    width: 300px;
+}
